Some minor adjustments: Prevent selection of the candy and clothes etc. on the title screen, disable Chrome's default focus outline, and make the banner overlap the banner flair less.

--- a/css/spni.css
+++ b/css/spni.css
@@ -1545,10 +1545,11 @@ ul.dropdown-menu>li {
     font-size: 120%;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
-    top: 17%;
+    border-top: 0;
+    top: 17.5%;
     position: absolute;
     padding-top: 0.5%;
-    height: 5.5%;
+    height: 5%;
     width: 4%;
 }
 
@@ -1571,7 +1572,6 @@ ul.dropdown-menu>li {
 }
 
 .reddit-logo {
-    width: 100%;
     height: 100%;
 }
 
@@ -1624,6 +1624,7 @@ ul.dropdown-menu>li {
     position: absolute;
     bottom: 0;
     height: 80%;
+    pointer-events: none;
 }
 
 /************************************************************
@@ -4044,6 +4045,8 @@ ul.dropdown-menu>li {
  * UX
  ************************************************************/
 
+.title-candy,
+#main-title-container,
 .player-card-area,
 .player-card-area input,
 .opponent-card-area,
@@ -4065,8 +4068,12 @@ ul.dropdown-menu>li {
                                   supported by Chrome and Opera */
 }
 
+.focus-indicators-enabled a:focus,
 .focus-indicators-enabled input[type=image]:focus,
 .focus-indicators-enabled button:focus {
     outline: 1px dotted #fff;
     outline-offset: -1px;
+}
+:focus {
+    outline: none;
 }
